change file name

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 This READ ME accompanies the final analysis code for the Many Analysts Religion Project (MARP) of Team 041: Esther Maassen & Michèle Nuijten.
 
-The final (and only) analysis script is called analysis-code.R. In order to run this script, you need to have access to the MARP data. 
+The final (and only) analysis script is called final_analysis_code.R. In order to run this script, you need to have access to the MARP data. 
 
 The analysis script is set-up chronologically: a user can walk through the script to perform the data cleaning and analysis steps in the correct order. The script contains detailed comments that explain what happens in certain sections (and why) and how certain results can be interpreted.
 
